[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/dark_mage.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Mini_Boss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Mini_Boss_Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="World_Mini_Boss" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 5

[node name="Body_Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 15

[node name="Area_Shape" type="CollisionShape2D" parent="Area"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Enemy_Animation" type="AnimationPlayer" parent="."]
autoplay = "Mini_Boss_Anim"
anims/Mini_Boss_Anim = SubResource( 3 )
anims/damage_anim = ExtResource( 3 )

[node name="Attack_Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
